# EasyEcom

./: .env  .env.example  .gitignore  AGENTS.md  CLEANUP_PLAN.md  DEPLOYMENT_CHECKLIST_AUTH.md  MIGRATION_REPORT.md  README.md  apprunner.yaml  auth_cookie.txt  cookie.txt  cookies.txt  easy_ecom.db  improvement_proposal.md  pyproject.toml  startup.sh  test_update.txt
.venv311/: pyvenv.cfg
ai/: AGENTS.md
archive/legacy/: README.md
backend/: AGENTS.md
db/: AGENTS.md
docs/: ai-n8n-chatbot-architecture.md  ai-native-chatbot-architecture.md  architecture.md  automation_implementation_brief.md  aws_target_architecture.md  backend-status-baseline.md  business-rules.md  customer-communication-assistant.md  finance-access-matrix.md  phase10_settings_module.md  phase11_purchases_module.md  phase12_reporting_analytics.md  phase13_ai_readiness.md  phase14_channel_integration_foundation.md  phase15_human_reviewed_ai_workflow.md  phase16_controlled_partial_automation.md  phase1_architecture_assessment.md  phase2_api_hardening.md  phase3_dashboard_v2.md  phase4_customers_module.md  phase5_sales_module.md  phase6_inventory_module.md  phase7_finance_module.md  phase8_returns_module.md  phase9_admin_roles.md  pricing-strategy.md  staging-workflow-policy.md  tenant-data-model.md
easy_ecom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: .env.example  AGENTS.md  amplify.yml  middleware.ts  next.config.js  package-lock.json  package.json  vitest.config.ts
scripts/: apply_branch_protection.sh  auth_deploy_smoke.sh  build_backend_release.sh  catalog_deploy_smoke.sh  check_repo_surface.sh  db_psql.sh  db_tunnel.sh  dbeaver_gateway.sh  deploy_prod.sh  export_rds_pre_reset.sh  local_preview_before_push.sh  reset_rds_to_auth_core.sh  reset_rds_to_full_foundation.sh  staging_quality_gate.sh  trigger_amplify_deploy.sh
tests/: test_ai_chat_service.py  test_ai_router.py  test_customer_communication_guardrails.py  test_variant_stock.py
(+505 files in other folders)
