[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-ecom"
version = "0.1.0"
description = "Enterprise-grade multi-tenant inventory, sales, and finance app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.32",
  "pandas>=2.1",
  "plotly>=5.20",
  "passlib[bcrypt]>=1.7",
  "bcrypt<4",
  "python-dotenv>=1.0",
  "filelock>=3.14",
  "pydantic>=2.6",
  "streamlit-autorefresh>=1.0",
  "reportlab>=4.2",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "httpx>=0.27",
]


[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "ruff>=0.3",
  "mypy>=1.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["easy_ecom*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["easy_ecom/tests"]
