[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-ecom"
version = "0.1.0"
description = "Enterprise-grade multi-tenant inventory, sales, and finance app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.1",
  "bcrypt>=4.0",
  "boto3>=1.34",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.6",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "Pillow>=10.3",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
]


[project.optional-dependencies]
backend = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "psycopg[binary]>=3.1",
]

dev = [
  "pytest>=8.0",
  "black>=24.0",
  "ruff>=0.3",
  "mypy>=1.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["easy_ecom*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["easy_ecom/tests"]
